// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`http-intercept records request body via .end 1`] = `
Array [
  Object {
    "method": "POST",
    "requestBody": "Hello there!",
    "responseBody": "{\\"status\\":\\"OK\\"}",
    "responseHeaders": Object {
      "connection": "close",
      "content-length": "15",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": "success",
    "statusCode": 200,
    "type": "request",
  },
]
`;

exports[`http-intercept records request body via .write 1`] = `
Array [
  Object {
    "method": "POST",
    "requestBody": "Hello there!",
    "responseBody": "{\\"status\\":\\"OK\\"}",
    "responseHeaders": Object {
      "connection": "close",
      "content-length": "15",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": "success",
    "statusCode": 200,
    "type": "request",
  },
]
`;

exports[`http-intercept records request body via .write and .end 1`] = `
Array [
  Object {
    "method": "POST",
    "requestBody": "Hello there and there!",
    "responseBody": "{\\"status\\":\\"OK\\"}",
    "responseHeaders": Object {
      "connection": "close",
      "content-length": "15",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": "success",
    "statusCode": 200,
    "type": "request",
  },
]
`;

exports[`http-intercept respects \`shouldRecord\` property 1`] = `Array []`;

exports[`http-intercept respects limits on request body 1`] = `
Array [
  Object {
    "method": "POST",
    "requestBody": "",
    "responseBody": "{\\"status\\":\\"OK\\"}",
    "responseHeaders": Object {
      "connection": "close",
      "content-length": "15",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": "success",
    "statusCode": 200,
    "type": "request",
  },
]
`;

exports[`http-intercept respects limits on request body2 1`] = `
Array [
  Object {
    "method": "POST",
    "requestBody": "Hello ",
    "responseBody": "{\\"status\\":\\"OK\\"}",
    "responseHeaders": Object {
      "connection": "close",
      "content-length": "15",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": "success",
    "statusCode": 200,
    "type": "request",
  },
]
`;

exports[`http-intercept supports stream 1`] = `
Array [
  Object {
    "method": "POST",
    "requestBody": "Hello there!",
    "responseBody": "{\\"status\\":\\"OK\\"}",
    "responseHeaders": Object {
      "connection": "close",
      "content-length": "15",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": "success",
    "statusCode": 200,
    "type": "request",
  },
]
`;

exports[`http-intercept works 1`] = `
Array [
  Object {
    "method": "GET",
    "requestBody": "",
    "responseBody": "{\\"status\\":\\"OK\\"}",
    "responseHeaders": Object {
      "connection": "close",
      "content-length": "15",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": "success",
    "statusCode": 200,
    "type": "request",
  },
  Object {
    "method": "GET",
    "requestBody": "",
    "responseBody": "{\\"status\\":\\"FAIL\\"}",
    "responseHeaders": Object {
      "connection": "close",
      "content-length": "17",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": "error",
    "statusCode": 500,
    "type": "request",
  },
]
`;
